--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.7.3
+altgraph==0.17
 async-timeout==3.0.1
 attrs==20.3.0
 Automat==20.2.0
@@ -8,11 +9,13 @@ certifi==2020.12.5
 cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
+coloredlogs==15.0
 constantly==15.1.0
 crochet==1.12.0
 cryptography==3.3.1
 cssselect==1.1.0
 Flask==1.1.2
+humanfriendly==9.1
 hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
@@ -23,6 +26,7 @@ Jinja2==2.11.2
 jmespath==0.10.0
 logzero==1.6.3
 lxml==4.6.2
+macholib==1.14
 MarkupSafe==1.1.1
 multidict==5.1.0
 parsel==1.6.0
@@ -33,6 +37,8 @@ pycparser==2.20
 PyDispatcher==2.0.5
 Pygments==2.7.3
 PyHamcrest==2.0.2
+pyinstaller==4.1
+pyinstaller-hooks-contrib==2020.11
 pymongo==3.11.2
 PyMySQL==0.10.1
 pyOpenSSL==20.0.1
@@ -43,6 +49,7 @@ scrapydo==0.2.2
 service-identity==18.1.0
 six==1.15.0
 soupsieve==2.1
+tqdm==4.55.1
 Twisted==20.3.0
 typing-extensions==3.7.4.3
 urllib3==1.26.2
@@ -50,4 +57,5 @@ w3lib==1.22.0
 Werkzeug==1.0.1
 wrapt==1.12.1
 yarl==1.6.3
+youtube-dl==2021.1.3
 zope.interface==5.2.0
