--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 coloredlogs==15.0
+config==0.5.0.post0
 constantly==15.1.0
 crochet==1.12.0
 cryptography==3.3.1
